# Krakenvolution

./: #main.cpp  .gitignore  .gitmodules  README.md  desktop.ini
Control/: .gitignore  escon_rueda_derecha.edc  escon_rueda_izquierda.edc
Control/Control Parejitas/: compile_commands.json  no_verify.py  platformio.ini
Control/Control Parejitas Due (no protocol)/include/: RobotServos.hpp  motion_controller.hpp  pines_&_constexpr.hpp
Control/Control Parejitas Due (no protocol)/src/: eurouart.cpp  main.cpp
Control/Control Parejitas Due (protocol)/include/: motion_controller.hpp  pines_&_constexpr.hpp
Control/Control Parejitas Due (protocol)/src/: main.cpp
Control/Control Parejitas Due (protocolV2)/: compile_commands.json  platformio.ini
Control/Control Parejitas Due (protocolV2)/include/: Adafruit_PWMServoDriver.h  eurouart.hpp  motion_controller.hpp  pines_&_constexpr.hpp
Control/Control Parejitas Due (protocolV2)/src/: Adafruit_PWMServoDriver.cpp  RobotServos.cpp  eurouart.cpp  main.cpp
Control/Control Parejitas/include/: motion_controller.hpp  pines_&_constexpr.hpp
Control/Control Parejitas/lib/: .gitignore  comms
Control/Control Parejitas/src/: RobotServos.cpp  eurouart.cpp  main.cpp
Control/Control Tactico Due/: .gitignore  compile_commands.json  platformio.ini
Control/Control_driver/: .gitignore  platformio.ini
Control/General Robot Controller (no protocol + DUE)/: platformio.ini
Control/General Robot Controller (no protocol + MEGA)/: platformio.ini
Documentation/.obsidian/: app.json  workspace
Documentation/Standards/: Folder structure.md
ROS/: errors.txt  odom_pose  print_slow.sh
ROS/install/: local_setup.sh  setup.sh
ROS/log/: latest_build
ROS/rosbag2_2023_04_06-19_51_29/: metadata.yaml  rosbag2_2023_04_06-19_51_29_0.db3
ROS/src/: .gitignore
ROS/src/serial_bridge/: CMakeLists.txt  package.xml
ROS/src/serial_bridge/action/: Order.action
ROS/src/serial_bridge/include/: SharedKrakenUART
ROS/src/serial_bridge/include/serial_bridge/: DummySerialNode.hpp  SerialBridgeNode.hpp  geometry_utils.hpp  pose2d.hpp  serial_port.hpp  simulate_orders.hpp
ROS/src/serial_bridge/launch/: prompt_launch.py  serial_launch.py
ROS/src/serial_bridge/src/: dummy_serial_bridge_node.cpp  dummy_serial_main.cpp  serial_bridge_client.py  serial_bridge_main.cpp  serial_bridge_node.cpp  serial_brige_node.py  serial_manager.py
ROS/src/serial_bridge/src/serial_bridge/: DummySerialNode.cpp  SerialBridgeNode.cpp  geometry_utils.cpp  serial_port.cpp  simulate_orders.cpp
ROS/src/serial_bridge/tests/: test0.cpp
ROS/src/uahrk_decision_making/: CMakeLists.txt  package.xml
ROS/src/uahrk_decision_making/behavior_trees/: go_to_pose_tree.xml  hello_tree.tree.xml  pub_points_tree.xml  reset_params_tree.xml  run_extern_tree.xml  sequences_tree.tree.xml  sequences_tree.xml  square_tree.xml  square_tree_2.xml  system_tree.xml  test.xml  timer_test.tree.xml  update_init_state.xml  wait_start_signal_tree.xml
ROS/src/uahrk_decision_making/include/uahrk_decision_making/: BTActionNode.hpp  CallerBTNode.hpp  FindBasketBTNode.hpp  FindClosestCakeBTNode.hpp  FindClosestSpawnBTNode.hpp  GoToPoseBTNode.hpp  HelloNode.hpp  PointToBTNode.hpp  PubPointsBTNode.hpp  ResetParamsBTNode.hpp  RunExternBT_BTNode.hpp  TimerBTNode.hpp  WaitStartBTNode.hpp
ROS/src/uahrk_decision_making/include/uahrk_decision_making/old_nodes/: UpdateInitStateBTNode.hpp  WaitStartSignalBTNode.hpp
ROS/src/uahrk_decision_making/palletes/: GoToPosePallete.xml  RunExternBT.xml  SystemPallete.xml  TheGoodOne.xml
ROS/src/uahrk_decision_making/src/: decision_main.cpp
ROS/src/uahrk_decision_making/src/old_nodes/: UpdateInitStateBTNode.cpp  WaitStartSignalBTNode.cpp
ROS/src/uahrk_decision_making/src/uahrk_decision_making/: CallerBTNode.cpp  FindBasketBTNode.cpp  FindClosestCakeBTNode.cpp  FindClosestSpawnBTNode.cpp  GoToPoseBTNode.cpp  HelloNode.cpp  PointToBTNode.cpp  PubPointsBTNode.cpp  ResetParamsBTNode.cpp  RunExternBT_BTNode.cpp  TimerBTNode.cpp  WaitStartBTNode.cpp
ROS/src/uahrk_localization/: CMakeLists.txt  package.xml
ROS/src/uahrk_localization/include/: ekf_krakens.hpp
ROS/src/uahrk_localization/include/uahrk_localization/: LocalizationNode.hpp  RobotSimNode.hpp  ekf_krakens.hpp
ROS/src/uahrk_localization/log/: latest_build
ROS/src/uahrk_localization/src/: ekf_krakens.cpp  localization_main.cpp  localization_node.cpp
ROS/src/uahrk_localization/src/uahrk_localization/: LocalizationNode.cpp  RobotSimNode.cpp  ekf_krakens.cpp
ROS/src/uahrk_localization/uahrk_localization/: Localization.py  track_node_main.py  ukf.py
ROS/src/uahrk_navigation/: CMakeLists.txt  README.md  package.xml
ROS/src/uahrk_navigation/config/rviz/: Tf_config.rviz
ROS/src/uahrk_navigation/docs/: mermaid_diagram.txt
ROS/src/uahrk_navigation/include/uahrk_navigation/: GridNode.hpp  MoveToPoseNode.hpp  PathFindingNode.hpp  RobotTFNode.hpp  astar_ros.hpp  grid.hpp  move_utils.hpp  next_move.hpp  point2d.hpp  pose2d.hpp
ROS/src/uahrk_navigation/launch/: move_robot_demo_launch.py  move_robot_demo_launch_v2.py  robot_tf_rviz_launch.py  robot_tf_rviz_launch_v2.py
ROS/src/uahrk_navigation/src/: RvizInterfaceNode.cpp  basic_node.cpp  grid_main.cpp  move_to_pose_main.cpp  path_finding_main.cpp  robot_tf_main.cpp
ROS/src/uahrk_navigation/src/uahrk_navigation/: GridNode.cpp  MoveToPoseNode.cpp  PathFindingNode.cpp  RobotTFNode.cpp  astar.cpp  astar_ros.cpp  move_utils.cpp  next_move.cpp
ROS/src/uahrk_navigation/tests/: advance_to_goal_test.cpp  move_flowgram_test.cpp  move_to_pose_utils_test.cpp  spin_to_goal_test.cpp
ROS/tools/: compiler.py  load.py  parser.py  termutils.py
Screen/screen/: screen.ino
Screen/screen platformio/: compile_commands.json  jason_messages.json  platformio.ini
Tools/Sequencer_gui/: App.py  actions.yaml  sequence_generated.json  sequence_generated.yaml
enviroment/: Dockerfile  alias.txt
enviroment/ISO/: 10-uahrkudev.rules  configure.sh  krakens-logo.py  mount_pendrive.service  mount_pendrive.sh  pendrive_disconnect.sh  roboot.service  startup.sh
(+136 files in other folders)
